--- a/src/main/resources/static/indexStyle.css
+++ b/src/main/resources/static/indexStyle.css
@@ -1,3 +1,40 @@
+*{margin: 0; padding: 0;
+box-sizing: border-box; text-align: center;
+font-family: 'Gugi', cursive;}
+
+main{
+
+ border:1px solid grey;
+ display: grid; color: white;
+ /*grid-template-rows: 60px 100px 200px 60px;
+ */
+ grid-template-columns: repeat(3, 1fr) 150px;
+ grid-gap: 20px;
+
+}
+
+ .div1{
+  grid-column: 1/-1;
+ }
+
+ .div5{ background-color: #2f3542;
+  grid-row:2/auto;
+  grid-column: 4/5;
+ }
+ .div6{ background-color: #ffa502;
+  grid-column: 1/ 4;
+  margin-left: 15px;
+ }
+ .div7{
+  background-color: #24252A;
+  grid-column: 1/-1;
+    display: flex;
+    height: 75px;
+    justify-content:center;
+
+  }
+
+
 @import url('https://fonts.googleapis.com/css?family=Montserrat:500');
 
 * {
@@ -50,4 +87,122 @@ transition:all 0.2s ese 0s;
 .cta:hover {
   background-color: rgba(0, 136, 169, 0.8);
 }
+/* Reset */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Typography */
+
+body {
+    font-family: sans-serif;
+}
+
+/* Header Styles */
+
+.header {
+    background-color: rgb(4, 25, 94);
+    height: 5em;
+    border-bottom: 5px solid rgb(60, 127, 172);
+}
+
+h1 {
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-size: x-large;
+}
+
+.main {
+    width: 100%;
+    background-color: rgb(197, 196, 196);
+}
+
+.card-container {
+    width: 90%;
+    margin: 0 auto;
+    padding: 0.5em 0;
+    background-color: rgb(0, 0, 0);
+}
+
+.city {
+    width: 90%;
+    margin: 0.5em auto;
+    background-color: rgba(31, 31, 31, 0.95);
+    border: 2px solid rgb(173, 223, 169);
+}
+
+.city-image,
+.description {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.city-image {
+    padding: 1.2em 1em;
+}
+
+.description {
+    padding: 1em 2em;
+}
+
+.city-image img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    font-family: sans-serif;
+}
+
+.description h2 {
+    padding-bottom: 0.5em;
+}
+
+/* FLEXBOX STYLES */
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+@media (min-width: 640px) {
+
+.card-container {
+        display: flex;
+        flex-flow: wrap;
+    }
+
+.city {
+    flex: 1 0 48%;
+    margin: 1%;
+}
+
+@media (min-width: 1001px) {
+    .city {
+        flex: 1 0 31%;
+    }
+
+    .city:last-of-type {
+        flex-grow: 0;
+    }
+}
+.tagStyle{
+         background: #f8f8f8;
+      color: #878787;
+      float: left;
+      line-height: 100%;
+      margin: 2px;
+      padding: 2px 6px;
+
+}
+
 
