--- a/src/main/resources/templates/user_signup.html
+++ b/src/main/resources/templates/user_signup.html
@@ -22,9 +22,9 @@
 
 <div class="container-form">
 
-    <form>
+    <form action="user_signup" method="post">
         <table>
-            <thead><tr><th colspan="2"><h2>Enter Your Login Details</h2><hr></th>
+            <thead><tr><th colspan="2"><h2>Enter Your SignUp Details</h2><hr></th>
             </tr></thead>
             <tr>
                 <td><label>Enter Your Name : </label></td>
