--- a/src/main/resources/static/indexStyle.css
+++ b/src/main/resources/static/indexStyle.css
@@ -99,6 +99,7 @@ transition:all 0.2s ese 0s;
 
 body {
     font-family: sans-serif;
+    background-color: white;
 }
 
 /* Header Styles */
@@ -125,6 +126,7 @@ h1 {
     margin: 0 auto;
     padding: 0.5em 0;
     background-color: rgb(0, 0, 0);
+
 }
 
 .city {
@@ -179,6 +181,7 @@ a {
 .card-container {
         display: flex;
         flex-flow: wrap;
+        justify-content: center;
     }
 
 .city {
