Comment and pagination features added

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,10 +48,16 @@
                     </div>
                 </a>
             </div>
+
         </div>
 
     </div>
+            <di style="margin-left:115%;display:flex;justify-content:center;">
+                <a th:href="@{/?page=}"+1 style="color:black">Previous</a><span style="color:black;margin-left:5px;margin-right:5px;"> | </span>
+                <a th:href="@{/?page=}"+1 style="color:black">Next</a>
 
+
+            </di>
     <div class="div7">
         Footer
     </div>
