--- a/src/main/resources/templates/viewpost.html
+++ b/src/main/resources/templates/viewpost.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>MountBlue Blog Post</title>
     <meta name="description" content="">
+    <script
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+
     <meta name="viewport" content="width:device-width,initial-scale=1">
     <link rel="stylesheet" th:href="@{indexStyle.css}">
 </head>
@@ -12,7 +16,7 @@
 
 <main>
     <header class="div1">
-        <a th:href="@{/}"> <img class="logo"  src="BlogPostLogo.png" alt="logo"></a>
+        <a th:href="@{/}"> <img class="logo" src="BlogPostLogo.png" alt="logo"></a>
         <nav>
             <ul class="navLinks">
                 <li><a href="/userlogin" target="_blank">Author Login</a></li>
@@ -36,19 +40,47 @@
 
         <div class="card-container" th:each="items : ${post}">
             <div class="city">
-                <a th:href="@{/viewpost?id=} + ${items.id}">
-                    <div class="city-image">
-                        <img src="http://lorempixel.com/output/city-q-g-640-480-1.jpg" alt="city">
-                    </div>
-                    <div class="description">
-                        <h2 th:text="${items.title}">Title</h2>
-                        <h3 th:text="${items.excerpt}"></h3>
-                         <P th:text="${items.content}"></P>
-                        <h4 th:text="${items.author}">Author</h4>
-                        <h5 th:text="${items.publishedAt}">Publish Date</h5>
-                    </div>
-                </a>
+                <!--       <a th:href="@{/viewpost?id=} + ${items.id}">-->
+                <div class="city-image">
+                    <img src="http://lorempixel.com/output/city-q-g-640-480-1.jpg" alt="city">
+                </div>
+                <div class="description">
+                    <h2 th:text="${items.title}">Title</h2>
+                    <h3 th:text="${items.excerpt}"></h3>
+                    <P th:text="${items.content}"></P>
+                    <h4 th:text="${items.author}">Author</h4>
+                    <h5 th:text="${items.publishedAt}">Publish Date</h5><br>
+                    <form action="saveComment" method="post">
+                        <section>
+                            <div>
+                                <input style="display:none;" type="text" name="id" th:value="${items.id}">
+                                <input type="text" name="name" placeholder="Enter Your Name" required>
+                                <input type="email" name="email" placeholder="Enter Your Email" required>
+                                <textarea name="comment" placeholder="Share your thoughts ..." required></textarea><br>
+                                <input type="submit" name="submit button">
+                            </div>
+
+                        </section>
+                    </form>
+                    <br>
+
+
+                    <form action="#">
+                        <input style="display:none" type="text" id="postId" th:value="${items.id}">
+
+                            <div>
+                                <ol>
+
+                                </ol>
+                            </div>
+
+                    </form>
+                </div>
+
+                <!-- </a>-->
             </div>
+
+
         </div>
 
     </div>
@@ -57,6 +89,34 @@
         Footer
     </div>
 </main>
+<script type="text/javascript">
+$( document ).ready(function() {
+   let id = $("#postId").val();
+
+			$.ajax({
+				url : "getComment",
+				type : "get",
+				data : {
+					"postId" : id
+				},
+				success : function(data) {
+                          console.log(data);
+                         var res = data.split(",");
+
+                        for(var i=res.length;i>0;i--){
+                                  if(res[i] === 'null' || res[i] ==="" || res[i] ===undefined)
+                                        continue;
+
+                               $("ol").append("<li>"+res[i]+"</li>");
+                        }
+
+				}
+
+			});
+		});
+
+</script>
+
 
 </body>
 </html>
