--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -2,7 +2,7 @@
 <html xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>My Blog posts</title>
+    <title>Admin Page</title>
     <meta name="description" content="">
     <meta name="viewport" content="width:device-width,initial-scale=1">
     <link rel="stylesheet" th:href="@{indexStyle.css}">
@@ -32,16 +32,16 @@
 
     <div class="main-container">
         <div>
-            <h1>My Blog Posts</h1>
+            <h1>Admin Page</h1>
 
         </div>
         <div>
-        <form action="/post">
-            <input type="hidden" name="email" th:value="${userName}">
-            <input type="hidden" name="password" th:value="${password}">
-            <button style="height: 25px; width: 50%;">Add New Post</button>
+            <form action="/post">
+                <input type="hidden" name="email" th:value="${userName}">
+                <input type="hidden" name="password" th:value="${password}">
+                <button style="height: 25px; width: 50%;">Add New Post</button>
 
-        </form>
+            </form>
         </div>
     </div>
 
@@ -50,8 +50,8 @@
 
         <div class="column" th:each="items : ${post}">
 
-                <div class="card">
-                    <form action="edit" method="post">
+            <div class="card">
+                <form action="edit" method="post">
 
                     <h2 th:text="${items.title}">Title</h2>
                     <h3 th:text="${items.excerpt}"></h3>
@@ -70,8 +70,8 @@
                     <input type="text" style="display:none" name="visitor_id" th:value="${items.visitor_id}">
                     <button style="padding:4px 30px;margin:5px;">Edit</button>
 
-                    </form>
-                </div>
+                </form>
+            </div>
 
         </div>
 
