--- a/src/main/resources/templates/viewpost.html
+++ b/src/main/resources/templates/viewpost.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>MountBlue Blog Post</title>
     <meta name="description" content="">
-    <script
-            src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
     <meta name="viewport" content="width:device-width,initial-scale=1">
@@ -27,68 +26,57 @@
         <a class="cta" href="#">Contact</a>
     </header>
 
-    <div class="div5">
 
-        <div><h2>Tags</h2></div>
-        <hr style="color:gray;margin-bottom:10px;">
-        <a class="tagStyle" href="#" th:each="items:${tags}">
-            <span th:text="${items.name}">Artificial</span>
-        </a>
-    </div>
 
-    <div class="div6">
+    <div class="row">
 
-        <div class="card-container" th:each="items : ${post}">
-            <div class="city">
-                <!--       <a th:href="@{/viewpost?id=} + ${items.id}">-->
-                <div class="city-image">
-                    <img src="http://lorempixel.com/output/city-q-g-640-480-1.jpg" alt="city">
-                </div>
-                <div class="description">
+        <div class="column" style="margin-left: 25%;" th:each="items : ${post}">
+
+                <div class="card">
                     <h2 th:text="${items.title}">Title</h2>
                     <h3 th:text="${items.excerpt}"></h3>
                     <P th:text="${items.content}"></P>
                     <h4 th:text="${items.author}">Author</h4>
-                    <h5 th:text="${items.publishedAt}">Publish Date</h5><br>
-                    <form action="saveComment" method="post">
-                        <section>
-                            <div>
-                                <input style="display:none;" type="text" name="id" th:value="${items.id}">
-                                <input type="text" name="name" placeholder="Enter Your Name" required>
-                                <input type="email" name="email" placeholder="Enter Your Email" required>
-                                <textarea name="comment" placeholder="Share your thoughts ..." required></textarea><br>
-                                <input type="submit" name="submit button">
-                            </div>
+                    <h5 th:text="${items.publishedAt}">Publish Date</h5>
 
-                        </section>
-                    </form>
-                    <br>
+                </div>
+                <form action="saveComment" method="post">
+                    <section style="margin-top: 35px;margin-left: 37.5%;">
+                        <div>
+                            <table>
+                                <thead><tr><th>Post Your Comment</th></tr></thead>
+                                <tbody>
+                            <tr><td><input style="display:none;" type="text" name="id" th:value="${items.id}"></td></tr>
+                            <tr><td><input type="text" name="name" placeholder="Enter Your Name" required></td></tr>
+                            <tr><td><input type="email" name="email" placeholder="Enter Your Email" required></td></tr>
+                            <tr><td><textarea name="comment" placeholder="Share your thoughts ..." required></textarea><br></td></tr>
+                            <tr><td><input type="submit" name="submit button"></td></tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                    </section>
+                </form>
+            <br>
 
 
-                    <form action="#">
-                        <input style="display:none" type="text" id="postId" th:value="${items.id}">
+            <form action="#">
+                <input style="display:none" type="text" id="postId" th:value="${items.id}">
 
-                            <div>
-                                <ol>
-
-                                </ol>
-                            </div>
-
-                    </form>
+                <div>
+                    <ol style="list-style-type: none;">
+                    </ol>
                 </div>
 
-                <!-- </a>-->
-            </div>
-
-
+            </form>
         </div>
-
     </div>
 
-    <div class="div7">
-        Footer
+    <div class="footer">
+        <p> Footer</p>
     </div>
 </main>
+
 <script type="text/javascript">
 $( document ).ready(function() {
    let id = $("#postId").val();
@@ -114,6 +102,8 @@ $( document ).ready(function() {
 
 			});
 		});
+
+
 
 </script>
 
