Admin Delete Feature Added

--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -33,12 +33,13 @@
     <div class="main-container">
         <div>
             <h1>Admin Page</h1>
-
         </div>
+
         <div>
-            <form action="/post">
+            <form action="/adminlogin" method="post">
                 <input type="hidden" name="email" th:value="${userName}">
                 <input type="hidden" name="password" th:value="${password}">
+                <input type="hidden" name="page" value="1">
                 <button style="height: 25px; width: 50%;">Add New Post</button>
 
             </form>
@@ -69,14 +70,14 @@
                     <input type="text" style="display:none" name="isPublished" th:value="${items.published}">
                     <input type="text" style="display:none" name="visitor_id" th:value="${items.visitor_id}">
                     <button style="padding:4px 30px;margin:5px;">Edit</button>
+                    <button style="padding:4px 30px;margin:5px;">Delete Post</button>
 
                 </form>
             </div>
 
         </div>
-
-
     </div>
+
 
     <div class="footer">
         <p> Footer</p>
