--- a/src/main/resources/templates/user_signup.html
+++ b/src/main/resources/templates/user_signup.html
@@ -16,6 +16,7 @@
     align-content: center;
 
     }
+
     </style>
 </head>
 <body>
@@ -24,8 +25,13 @@
 
     <form action="user_signup" method="post">
         <table>
-            <thead><tr><th colspan="2"><h2>Enter Your SignUp Details</h2><hr></th>
-            </tr></thead>
+            <thead>
+            <tr>
+                <th colspan="2"><h2>Enter Your SignUp Details</h2>
+                    <hr>
+                </th>
+            </tr>
+            </thead>
             <tr>
                 <td><label>Enter Your Name : </label></td>
                 <td><input type="text" name="name" placeholder="Enter Your Name" required><br></td>
