--- a/src/main/resources/templates/userlogin.html
+++ b/src/main/resources/templates/userlogin.html
@@ -16,16 +16,22 @@
     align-content: center;
 
     }
+
     </style>
 </head>
 <body>
 
-    <div class="container-form">
+<div class="container-form">
 
     <form action="userlogin" method="post">
         <table>
-       <thead><tr><th colspan="2"><h2>Enter Your Login Details</h2><hr></th>
-       </tr></thead>
+            <thead>
+            <tr>
+                <th colspan="2"><h2>Enter Your Login Details</h2>
+                    <hr>
+                </th>
+            </tr>
+            </thead>
             <tr>
                 <td><label>Enter Your Email : </label></td>
                 <td><input type="email" name="email" placeholder="Enter Your Email Address" required><br></td>
@@ -38,7 +44,7 @@
         </table>
         <input style="margin-left: 33%;" type="submit">
     </form>
-    </div>
+</div>
 
 </body>
 </html>
