--- a/src/main/resources/templates/adminlogin.html
+++ b/src/main/resources/templates/adminlogin.html
@@ -16,6 +16,7 @@
     align-content: center;
 
     }
+
     </style>
 </head>
 <body>
@@ -24,8 +25,13 @@
 
     <form action="adminlogin" method="post">
         <table>
-            <thead><tr><th colspan="2"><h2>Enter Your Login Details</h2><hr></th>
-            </tr></thead>
+            <thead>
+            <tr>
+                <th colspan="2"><h2>Enter Your Login Details</h2>
+                    <hr>
+                </th>
+            </tr>
+            </thead>
             <tr>
                 <td><label>Enter Your User Name : </label></td>
                 <td><input type="text" name="userName" placeholder="Enter Your User Name" required><br></td>
