--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -18,6 +18,7 @@
     }
 
 
+
     </style>
 </head>
 <body>
@@ -49,6 +50,11 @@
             <tr>
                 <td><label>Enter author name : </label></td>
                 <td><input type="text" name="author" placeholder="Author Name" required></input><br></td>
+            </tr>
+            <tr>
+                <td><label>Enter your Post tags : </label></td>
+                <td><input type="text" name="tags" placeholder="Enter Your post tags with comma separated" required><br>
+                </td>
             </tr>
             <input type="text" style="display:none" name="id" th:value="${id}"/>
 
