Logout and Login feature added.

--- a/src/main/resources/templates/myblogs.html
+++ b/src/main/resources/templates/myblogs.html
@@ -24,6 +24,7 @@
             <ul class="navLinks">
                 <li><a href="/userlogin" target="_blank">Author Login</a></li>
                 <li><a href="/user_signup" target="_blank">Author SignUp</a></li>
+                <li><a href="/logout">Author logout</a></li>
                 <li><a href="/post">Admin Login</a></li>
             </ul>
         </nav>
