--- a/src/main/resources/templates/adminlogin.html
+++ b/src/main/resources/templates/adminlogin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>User Login Portal</title>
@@ -22,7 +22,7 @@
 <body>
 
 <div class="container-form">
-        <h2>${SPRING_SECURITY_LAST_EXCEPTION.message}</h2>
+
     <form action="adminlogin" method="post">
         <table>
             <thead>
