Project Improvements on tag feature.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
 
     <div class="main-container">
         <div>
-            <h1>My Blog aplliaction</h1>
+            <h1>My Blog Application</h1>
         </div>
 
         <div>
