--- a/src/main/resources/templates/viewpost.html
+++ b/src/main/resources/templates/viewpost.html
@@ -9,6 +9,15 @@
 
     <meta name="viewport" content="width:device-width,initial-scale=1">
     <link rel="stylesheet" th:href="@{indexStyle.css}">
+    <style>
+      .tagStyle {
+    margin: 0 10px;
+    background: #888282;
+    color: white;
+    box-sizing: content-box;
+}
+
+    </style>
 </head>
 <body>
 
@@ -31,13 +40,13 @@
 
         <div class="column" style="margin-left: 25%;" th:each="items : ${post}">
 
-            <div class="card">
+            <div class="card" style="padding: 39px;">
                 <h2 th:text="${items.title}">Title</h2>
                 <h3 th:text="${items.excerpt}"></h3>
                 <P th:text="${items.content}"></P>
                 <h4 th:text="${items.author}">Author</h4>
                 <h5 th:text="${items.publishedAt}">Publish Date</h5>
-
+                <div id="tags"></div>
             </div>
             <form action="saveComment" method="post">
                 <section style="margin-top: 35px;margin-left: 37.5%;">
@@ -115,11 +124,29 @@ $( document ).ready(function() {
 				}
 
 			});
+
+			$.ajax({
+				url : "getTags",
+				type : "get",
+				data : {
+					"postId" : id
+				},
+				success : function(data) {
+                          console.log(data);
+                         var res = data.split(",");
+
+                        for(var i=res.length;i>0;i--){
+                                  if(res[i] === 'null' || res[i] ==="" || res[i] ===undefined)
+                                        continue;
+
+                               $("#tags").append("<span class='tagStyle'>"+res[i]+"</span>");
+                        }
+
+				}
+
+			});
+
 		});
-
-
-
-
 </script>
 
 
