--- a/src/main/resources/templates/adminlogin.html
+++ b/src/main/resources/templates/adminlogin.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>User Login Portal</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
         input{
         padding:5px;
@@ -22,8 +23,10 @@
 <body>
 
 <div class="container-form">
+    <input type="text" th:value="${userName}" name="userName" id="userName" style="display:none">
+    <input type="text" th:value="${password}" name="password" id="password" style="display:none">
 
-    <form action="adminlogin" method="post">
+    <form action="adminlogin" method="post" id="formId">
         <table>
             <thead>
             <tr>
@@ -34,17 +37,25 @@
             </thead>
             <tr>
                 <td><label>Enter Your User Name : </label></td>
-                <td><input type="text" name="userName" placeholder="Enter Your User Name" required><br></td>
+                <td><input type="text" name="userName" th:value="${userName}" placeholder="Enter Your User Name" required><br></td>
             </tr>
             <tr>
                 <td><label>Enter Your Password : </label></td>
-                <td><input type="password" name="password" placeholder="Enter Your Password" required><br></td>
+                <td><input type="password" name="password" th:value="${password}" placeholder="Enter Your Password" required><br></td>
             </tr>
 
         </table>
         <input style="margin-left: 33%;" type="submit">
     </form>
 </div>
-
+<script>
+$(window).on('load', function(){
+        var userName = $("#userName").val();
+        var password = $("#password").val();
+        if(userName !=''){
+         $("#formId").submit();
+        }
+});
+</script>
 </body>
 </html>
